Fix text overflow

--- a/src/styles/rockets.module.css
+++ b/src/styles/rockets.module.css
@@ -15,3 +15,7 @@
 .name {
   margin: 0;
 }
+
+.description {
+  width: 81%;
+}
